# rust-nscoder

./: Cargo.toml
src/: archiver.rs  lib.rs  object.rs  types.rs
tests/: test_archive.rs  test_unarchive.rs
tests/fixtures/: mobilesync_backup.plist
